[project]
authors = [
  {name = "Istvan Szukacs", email = "istvan@datadeft.eu"},
]
dependencies = []
description = "Personal local search"
keywords = ["search", "data"]
license = {text = "AGPL"}
name = "cerchier"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[project.optional-dependencies]
test = [
  "pytest>=2.7.3",
  "pre-commit==3.0.4",
  "ruff==0.0.245",
  "black==23.1.0",
  "flit==3.8.0",
  "build==0.10.0",
  "twine==4.0.2",
]

[tool.ruff]
line-length = 126

[project.urls]
Documentation = "https://??/"
Source = "https://github.com/??"

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.pytest.ini_options]
log_cli = true
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_level = "INFO"
